# sphinx-nekochan

./: .gitignore  .readthedocs.yml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml  workflow.yml
doc/: conf.py  index.md  index.rst
docs/: about.md  background.md  changelog.md  conf.py  index.md  japanese.md  nekochan_emojis.md  nekochan_emojis_without_text.md
docs/snippets/: simple-ja.md  simple-ja.rst  simple.md  simple.rst  with-height-alt-ja.md  with-height-alt-ja.rst  with-height-alt.md  with-height-alt.rst  with-transform-ja.md  with-transform-ja.rst  with-transform.md  with-transform.rst
scripts/: README.md  nekochanimg2svg.py
sphinx_nekochan/: __init__.py  make_nekochan_json.py
sphinx_nekochan/_static/: sphinx_nekochan.css
sphinx_nekochan/data/: aliases.json  make_nekochan_json.py
