[project]
name = "sphinx-nekochan"
version = "0.1.0"
description = "A Sphinx extension for adding the Nekochan(cat) emoji to documents."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Takanori Suzuki", email = "takanori@takanory.net" }
]
requires-python = ">=3.10"
dependencies = [
    "sphinx>=8.0",
]

[project.optional-dependencies]
docs = [
    "furo>=2024.8.6 ",
    "matplotlib>=3.10.0",
    "myst-parser>=4.0.0",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-revealjs>=3.0.5",
    "sphinxext-opengraph>=0.9.1",
]
dev = [
    "ruff>=0.8.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
