[project]
name = "sphinx-nekochan"
dynamic = ["version"]
description = "A Sphinx extension for adding the Nekochan(cat) emoji to documents."
authors = [{name = "Takanori Suzuki", email = "takanori@takanory.net"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Text Processing :: Markup :: reStructuredText",
]
keywords = ["sphinx", "extension"]
requires-python = ">=3.10"
dependencies = [
    "sphinx>=8.0",
]

[project.urls]
Documentation = "https://sphinx-nekochan.readthedocs.io/"
Repository = "https://github.com/takanory/sphinx-nekochan"

[project.optional-dependencies]
docs = [
    "furo>=2024.8.6 ",
    "matplotlib>=3.10.0",
    "myst-parser>=4.0.0",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-revealjs==3.1.1",
    "sphinxext-opengraph>=0.9.1",
]
dev = [
    "ruff>=0.8.6",
]

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = ["sphinx_nekochan/"]
exclude = [
    "sphinx_nekochan/make_nekochan_json.py",
    "sphinx_nekochan/data/aliases.json",
    "sphinx_nekochan/data/*.zip",
]